--- a/커피의유래.html
+++ b/커피의유래.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1><a href="home.html">About Coffee</a></h1>
+        <h1><a href="index.html">About Coffee</a></h1>
         <ol>
             <li>커피의 유래</li>
             <li><a href="종류.html">커피의 종류</a></li>
